--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "vant": "^4.8.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "babel-plugin-import": "^1.13.8",
+    "unplugin-vue-components": "^0.26.0"
   },
   "browserslist": [
     "> 1%",
